Fixing panel z-index.

--- a/css/main.css
+++ b/css/main.css
@@ -210,7 +210,7 @@ hr {
 .icon-panel {
   position: fixed;
   cursor: pointer;
-  z-index: 9999;
+  z-index: 2000;
   top: 15px;
   right: 15px;
 }
@@ -557,6 +557,9 @@ hr {
  * Modal
  */
 
+.modal {
+  z-index: 9999;
+}
 .modal-dialog {
   margin-top: 20px;
 }
